--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Gold Visibility Creator</title>
     <script>
-        window.addEventListener('error', function (e) {
-            window.location.href = '/error.html#' + encodeURIComponent(e.message);
+        window.addEventListener('error', function () {
+            window.location.href = '/error.html';
         });
     </script>
 </head>
 <body>
-<div id="app"></div>
+    <div id="app"></div>
 </body>
 </html>
 
