--- a/error.html
+++ b/error.html
@@ -11,7 +11,7 @@
         <h1>An unexpected error occurred</h1>
         <p class="lead">Please try again using an up-to-date browser like
             <a href="https://www.google.com/intl/en/chrome/">Chrome</a> or
-            <a href="https://www.mozilla.org/en/firefox/">Firefox</a>.
+            <a href="https://www.mozilla.org/en/firefox/">Firefox</a>
         </p>
         <a href="/">Take me back</a>
     </div>
