--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Gold Visibility Creator</title>
     <script>
         window.addEventListener('error', function () {
-            window.location.href = '/error.html';
+            window.location.href = '/error';
         });
     </script>
 </head>
