--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Gold Visibility Creator</title>
     <script>
-        window.addEventListener('error', function () {
-            window.location.href = '/error';
+        window.addEventListener('error', function (e) {
+            console.error(e);
         });
     </script>
 </head>
