--- a/src/error.html
+++ b/src/error.html
@@ -4,14 +4,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Gold Visibility Creator</title>
-    <script>
-        addEventListener('error', function () {
-            location.href = 'error';
-        });
-    </script>
 </head>
 <body>
-    <div id="app"></div>
+    ERROR
 </body>
 </html>
-
